--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,53 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-<button type="button" class="btn btn-default btn-sm">
-  <span class="glyphicon glyphicon-asterisk"></span> Asterisk
-</button>
+<body>
+<div id="telainteira" align="center">
+  <div id="icone">
+
+    <img src="../assets/angular-icon.png"/>
+
+  </div>
+  <div id="espaco">
+  </div>
+
+  <div id="conteudo">
+    <div class="row">
+      <div class="col-xs-3">
+      </div>
+      <div class="col-xs-6">
+
+          <label style="color:white;" for="usr">Origem:</label>
+          <div class="input-group ">
+          <input type="text" class="form-control" id="origem">
+            <div class="input-group-btn">
+              <button type="button" class="btn btn-default">
+              <span class="glyphicon glyphicon-upload"></span>
+              </button>
+            </div>
+          </div>
+      </div>
+    </div>
+    
+    <div id="espaco">
+
+    </div>
+
+    <div class="row">
+      <div class="col-xs-3">
+      </div>
+      <div class="col-xs-6">
+
+          <label style="color:white;" for="usr">Destino:</label>
+          <div class="input-group ">
+          <input type="text" class="form-control" id="destino">
+            <div class="input-group-btn">
+              <button type="button" class="btn btn-default">
+              <span class="glyphicon glyphicon-download"></span>
+              </button>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
