--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div id="telainteira" align="center">
   <div id="icone">
 
-    <img src="../assets/angular-icon.png"/>
+    <img class="img-responsive" src="../assets/angular-icon.png"/>
 
   </div>
   <div id="espaco">
@@ -37,13 +37,12 @@
       </div>
       <div class="col-xs-6">
 
-          <label style="color:white;" for="usr">Destino:</label>
+
           <div class="input-group ">
-          <input type="text" class="form-control" id="destino">
             <div class="input-group-btn">
-              <button type="button" class="btn btn-default">
-              <span class="glyphicon glyphicon-download"></span>
-              </button>
+              <a target="_self" href="http://www.planetpublish.com/wp-content/uploads/2011/11/The_Jungle_Book_T.pdf" download="foo.pdf">
+              <button type="button" class="btn btn-default">Download <span class="glyphicon glyphicon-download-alt"></span></button>
+              </a>
             </div>
           </div>
       </div>
