--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,6 @@
       </div>
     </div>
   </div>
-  <input type="file" (change)="changeListener($event)" #input />
+  <input type="file" accept="text/xml, .xhtml" (change)="changeListener($event)" #input />
 </div>
 </body>
