metodo para pegar valor implementado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,9 +29,10 @@
     </div>
     
     <div id="espaco">
-
+        
     </div>
 
+    <button type="button" name="qqnome" (click)="convLabel()" >Teste</button>
     <div class="row">
       <div class="col-xs-3">
       </div>
