botao Download desenvolvido

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,9 +40,7 @@
 
                     <div class="input-group ">
                         <div class="input-group-btn">
-                            <a target="_self" href="http://www.planetpublish.com/wp-content/uploads/2011/11/The_Jungle_Book_T.pdf" download="foo.pdf">
-                                <button type="button" class="btn btn-default">Download <span class="glyphicon glyphicon-download-alt"></span></button>
-                            </a>
+                                <button type="button" class="btn btn-default" (click)="downloadContent()">Download <span class="glyphicon glyphicon-download-alt"></span></button>
                         </div>
                     </div>
                 </div>
