--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,9 @@
                     <div class="input-group ">
                         <input type="file" class="form-control" id="origem">
                         <div class="input-group-btn">
-                            <button type="button" class="btn btn-default" (click)="loadFile()">
-              <span class="glyphicon glyphicon-upload"></span>
-              </button>
+                            <button type="button" class="btn btn-default " href="javascript:;" id="myWish" (click)="loadFile()">
+                            <span class="glyphicon glyphicon-upload"></span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -46,5 +46,11 @@
                 </div>
             </div>
         </div>
+    </div>
+     <div style="height:20px;" ></div> 
+    <div class="alert alert-success" id="success-alert">
+        <button type="button" class="close" data-dismiss="alert">x</button>
+        <strong>Sucesso! </strong>
+        Arquivo carregado com êxito.
     </div>
 </body>
