--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,9 @@
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-default" (click)="downloadContent()">Download <span class="glyphicon glyphicon-download-alt"></span></button>
                         </div>
+                         <div class="input-group-btn">
+                            <button type="button" class="btn btn-default" (click)="displayFile()">Exibir <span class="glyphicon glyphicon glyphicon-list-alt"></span></button>
+                        </div>
                     </div>
                 </div>
                 <p><br /></p>
